# qwt-ml

./: QwT_Multimodal_CLIP_Colab.ipynb  README.md  Untitled0.ipynb  qwt_resnet_group_conv_only_percentile.py  qwt_swin.py  requirements.txt
Checkpoints/deit_tiny/QwT/bs_32_worldsize_1_w_4_a_4_startblock_0_sed_0/: log.txt
Checkpoints/deit_tiny/QwT/bs_8_worldsize_1_w_4_a_4_startblock_0_sed_0/: log.txt
Checkpoints/resnet18/QwTGroupConv/bs_8_worldsize_1_w_4_a_4_kernelsize_1_factor_64_startblock_0_sed_0/: log.txt
QwT-det-RepQ-ViT/: MIGRATION.md  README.md  pyproject.toml  setup.py
QwT-det-RepQ-ViT/.kiro/specs/python-3.10-3.11-upgrade/: design.md  requirements.md  tasks.md
QwT-det-RepQ-ViT/mmdet/: __init__.py
QwT-det-RepQ-ViT/requirements/: build.txt  runtime.txt  tests.txt
QwT-det-RepQ-ViT/tests/test_compatibility/: README.md  TEST_SUMMARY.md  __init__.py  test_dependencies.py  test_model_loading.py  test_python_version.py
QwT-det-RepQ-ViT/tools/: VALIDATION_README.md  test.py  validate_imports.py  validate_installation.py
QwT-mm-RepQ-ViT/: README.md  main.py  mmm_ptq.py  qwerty.py  zero_shot.py
QwT-mm-RepQ-ViT/dataset/: dataset.py
QwT-mm-RepQ-ViT/models/: __init__.py  custom_model.py  model.py  transform.py
QwT-mm-RepQ-ViT/quant/: quant_model.py  quant_modules.py  quantizer.py
QwT-mm-RepQ-ViT/script/: run.sh
QwT-mm-RepQ-ViT/utils/: metadata.py  params.py  precision.py  util.py
classification/: new.ipynb  qwt_vit_and_deit.py  res_elm.py  res_elm_2.py
detection/: .gitignore  QUICKSTART.md  QwT_All_Models.ipynb  QwT_Detection_Setup.ipynb
(+4 files in other folders)
