[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "cython>=0.29.0",
    "numpy>=1.20.0,<2.0.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false

[project]
name = "mmdet"
dynamic = ["version", "dependencies", "optional-dependencies"]
description = "OpenMMLab Detection Toolbox and Benchmark"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache License 2.0"}
authors = [
    {name = "OpenMMLab", email = "openmmlab@gmail.com"}
]
keywords = ["computer vision", "object detection"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/open-mmlab/mmdetection"
